production/manifests_helm_charts/traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.videovault.ai`) && (PathPrefix(/dashboard) || PathPrefix(/api))
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: videovault
      services:
        - name: api@internal
          kind: TraefikService
